feat(taps & targets): migration to new scripting
part of kestra-io/kestra#1726